# buddy-bridge

./: .gitignore  .mcp.json  CLAUDE.md  aftman.toml  default.project.json  human_todo.md  selene.toml
docs/: BACKPACK_CHECKPOINT_DECISION.md  ENGINEERING_HANDOFF_USER2.md  GAMEDESIGN.md  GAME_DESIGN.md  INTEGRATION_CONTRACT_USER2.md  JUDGING_STRATEGY.md  MVP_SCOPE.md  PHISH_CONTENT.md  PHISH_CORE_LOOP.md  PHISH_MVP_PLAN.md  PHISH_PHISH_DEX.md  PHISH_PRD.md  PHISH_SCAM_CARDS.md  PRD.md  TECHNICAL_DESIGN.md
docs/archive/: BACKPACK_CHECKPOINT_P1P2.md  BACKPACK_CHECKPOINT_PRDS_README.md  BACKPACK_CHECKPOINT_PRD_V1_POLISHED.md  BACKPACK_CHECKPOINT_PRD_V2_AIRPORT_WORLD.md  BACKPACK_CHECKPOINT_PRD_V3_REINVENTED.md  GAME_DESIGN.md  MVP_SCOPE.md  README.md  STRANGER_DANGER_REDESIGN.md
prompts/: user1_map_prompt.md  user2_scripting_prompt.md
src/ReplicatedStorage/: RemoteService.lua
studio_scripts/: build_phish_decor.luau  build_phish_dock_extras.luau  build_phish_island_decor.luau  build_phish_polish.luau  build_phish_templates.luau  build_phish_water.luau  build_phish_world.luau  hack_boat_driver.server.luau
tasks/: lessons.md  todo.md  user1_map.md
tools/map-generator/: README.md  pyproject.toml
tools/map-generator/src/buddy_map_generator/: __init__.py  lua_emit.py  server.py  studio_client.py  style.py
tools/map-generator/src/buddy_map_generator/tools/: __init__.py  _props.py  backpack_checkpoint.py  booth_template.py  lobby.py  npc_templates.py  play_arena_slots.py  polish_pass.py  stranger_danger_park.py  verify.py
tools/map-generator/tests/: test_emitters.py
(+132 files in other folders)
