[project]
name = "buddy-map-generator"
version = "0.1.0"
description = "MCP server that generates a preliminary Buddy Bridge Roblox map by driving rbx-studio-mcp"
requires-python = ">=3.11"
authors = [{ name = "matheusmaldaner" }]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
buddy-map-generator = "buddy_map_generator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buddy_map_generator"]
